# blatt-7-aufgabe-1-1815

./: .travis.yml  CMakeLists.txt  README.md
avltree/: library.cpp  library.h
test/: CMakeLists.txt  testAvltree.cpp  testAvltree.h
